Fix: margin-top of dark mode toggle

--- a/styles/DarkMode.module.css
+++ b/styles/DarkMode.module.css
@@ -5,8 +5,7 @@
   flex-direction: row;
   align-items: center;
   gap: 4px;
-  margin: auto 0;
-  padding-top: 1rem;
+  margin-top: auto;
 }
 
 .toggleThemeWrapper span {
